# firecracker

./: .dockerignore  .gitignore  .tool-versions  Makefile  blah.sh  main.tf  run_benchmarks.sh  variables.tf
.github/workflows/: firecracker.yml  pr_tests.yml
docs/: logger.md
fc-mock/: Cargo.toml  Dockerfile  README.md
fc-mock/src/: api_server.rs  api_types.rs  envd.rs  guest_mem.rs  main.rs  uffd.rs  vm_state.rs  workload.rs
fc-mock/tests/: test_e2e.sh
github-tf/: main.tf  variables.tf
resources/seccomp/: aarch64-unknown-linux-musl.json  x86_64-unknown-linux-musl.json
scripts/: build.sh
src/cpu-template-helper/src/utils/: mod.rs
src/firecracker/: Cargo.toml
src/firecracker/src/: main.rs
src/firecracker/src/api_server/: mod.rs  parsed_request.rs
src/firecracker/swagger/: firecracker.yaml
src/vmm/: Cargo.toml
src/vmm/src/: builder.rs  lib.rs  persist.rs  resources.rs  rpc_interface.rs
src/vmm/src/device_manager/: pci_mngr.rs  persist.rs
src/vmm/src/logger/: logging.rs  metrics.rs
src/vmm/src/persist/: mod.rs
src/vmm/src/snapshot/: mod.rs
src/vmm/src/utils/: mod.rs  pagemap.rs
src/vmm/src/vmm_config/: balloon.rs  instance_info.rs  machine_config.rs  meminfo.rs  mod.rs  snapshot.rs
src/vmm/tests/: integration_tests.rs
tests/: README.md  conftest.py
tests/framework/: http_api.py  microvm.py
tests/integration_tests/functional/: test_api.py  test_snapshot_basic.py
tests/integration_tests/performance/: README_sysbench_pause_resume.md  benchmark_results.md  test_block_mmap_simple.py  test_sysbench_pause_resume.py
(+38 files in other folders)
