[workspace]

[package]
name = "fc-mock"
version = "1.14.1"
edition = "2021"
license = "Apache-2.0"
description = """
Drop-in Firecracker replacement for environments without KVM.
Implements the same HTTP/Unix-socket API and UFFD handshake protocol,
but without any VM machinery — for testing orchestration layers.
"""

[[bin]]
name = "firecracker"
path = "src/main.rs"

[dependencies]
bytes = "1"
clap = { version = "4", features = ["derive"] }
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
libc = "0.2"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
